# ci-test

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  ci-test.nuspec  test.puml
.github/workflows/: blank.yml  build.yml  desktop.yml  release.yml  ubuntu.yml  windows.yml
code/: demo.cpp
docs/: conf.py  index.rst
src/: CMakeLists.txt  test.cpp
src/foo/: CMakeLists.txt  foo.cpp
src/test/: CMakeLists.txt  test.cpp
